# LBTE3DDGNodal

./: CMakeLists.txt  CMakeLists.txt.bak  LBTE3DDGNodal.cpp
include/: CMakeLists.txt  DG3DSolver.h  boundary.h  element.h  exception_types.h  global.h  globals.h  globals_mul.h  matrices.h  memory_manager.h  mesh.bak.h  mesh.h  problem_definition.h  solution.h  solver.h  solver_api.h  solver_multi_angle.h  source.h  surface.h  system_matrices.1.h  system_matrices.h  tests.h  types.h  types_mul.h  utilities.h
source/: CMakeLists.txt  LBTE3DDGNodal.cpp  boundary.cpp  element.cpp  global.cpp  globals.cpp  globals_mul.cpp  matrices.cpp  memory_manager.cpp  mesh.bak.cpp  mesh.cpp  problem_definition.cpp  solution.cpp  solver.cpp  solver_multi_angle.cpp  source.cpp  surface.cpp  system_matrices.1.cpp  system_matrices.cpp  utilities.cpp
source/include/: CMakeLists.txt  Elements.h  Global.h  Interfaces.h  Matrices.h  Meshes.h  SystemMatrices.h  Types.hpp  Utils.h  globals.h  mesh.h  solver.h  system_matrices.h  types.h  utilities.h
source/lib/: IMATLABC.h  IMATLABC.lib
source/source/: CMakeLists.txt  Matrices.cpp  Meshes.cpp  SystemMatrices.cpp  Utils.cpp  mesh.cpp  solver.cpp  system_matrices.cpp  utilities.cpp
